Update NewYAMLPipeline.yml for Azure Pipelines

--- a/NewYAMLPipeline.yml
+++ b/NewYAMLPipeline.yml
@@ -19,7 +19,6 @@ jobs:
       CheckmarxService: 929ae9ce-5340-4677-897c-6bfc53da82af
       fullTeamName: '\CxServer'
       enableDependencyScan: true
-      dependencyServerURL: 44c535be-58c8-4c1f-a5aa-780ff221a4da
-      dependencyTenant: Plugins
+      CheckmarxServiceForSca:
       scaTeam: '\CxServer'
 ...
