--- a/TestYAML.yml
+++ b/TestYAML.yml
@@ -15,9 +15,12 @@ jobs:
     displayName: Application security testing
     inputs:
       projectName: New_Project1
+      enableSastScan: false
       CheckmarxService: 929ae9ce-5340-4677-897c-6bfc53da82af
       fullTeamName: '\CxServer'
       enableDependencyScan: true
       dependencyServerURL: 44c535be-58c8-4c1f-a5aa-780ff221a4da
+      dependencyAccessControlURL: https://abc.checkmarx.net
+      dependencyTenant: Plugins
       scaTeam: '\CxServer'
 ...
