--- a/NewPlugin_WithOldEP.yml
+++ b/NewPlugin_WithOldEP.yml
@@ -20,4 +20,5 @@ jobs:
       enableDependencyScan: true
       dependencyServerURL: 44c535be-58c8-4c1f-a5aa-780ff221a4da
       dependencyTenant: Plugins
+      scaTeam: \CxServer
 ...
